--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ td {
 <body data-id="1"><div data-id="2" class="ft_column __w-1 __h-2"><div data-id="3" class="ft_column ft_full_size"><div data-id="4" class="ft_column __w-3 __h-4 __bgc-5"><comment data-id="5"></comment><div data-id="6" class="ft_column"><comment data-id="7"></comment></div><comment data-id="8"></comment><comment data-id="9"></comment><div data-id="11" class="ft_column __w-6 __bgc-7"><div data-id="12" class="ft_column"><comment data-id="13"></comment></div><div data-id="14" class="ft_column __w-8"><comment data-id="15"></comment><comment data-id="16"></comment><comment data-id="17"></comment><comment data-id="18"></comment><div data-id="20" class="ft_column __w-9 __bgc-10"><div data-id="21" class="ft_row __w-11 __pl-12 __pr-13 __pt-14 __pb-15 __jc-16 __ali-17"><div data-id="22" class="ft_column"></div><div data-id="23" class="ft_row __w-18 __g-19"><img data-id="24" src="-/fastn-community.github.io/doc-site/static/header/hamburger.svg" class="__cur-20 __as-21 __w-22"></img><comment data-id="25"></comment><img data-id="26" src="-/arjaupashak.com/static/logo.svg" class="__h-23"></img><comment data-id="27"></comment><comment data-id="28"></comment><comment data-id="29"></comment></div><comment data-id="30"></comment></div><div data-id="31" class="ft_row __w-24 __bgc-25"></div><div data-id="32" class="ft_row __w-26"><div data-id="33" class="ft_row __as-27"><comment data-id="34"></comment></div><div data-id="35" class="ft_row __w-28 __pt-29 __ox-30 __g-31"><comment data-id="36"></comment></div></div><comment data-id="37"></comment></div></div><div data-id="38" class="ft_column __w-32 __pl-33 __pr-34 __pt-35 __pb-36"><div data-id="39" class="ft_column __w-37"><div data-id="40" class="ft_row __w-38"><comment data-id="41"></comment><comment data-id="42"></comment></div><comment data-id="43"></comment></div><comment data-id="44"></comment><div data-id="45" class="ft_column __w-39"><comment data-id="46"></comment><div data-id="47" class="ft_column __w-40 __g-41"><div data-id="48" class="ft_column __w-42 __mt-43 __g-44"><div data-id="49" class="ft_row __w-45 __g-46"><img data-id="50" src="-/arjaupashak.com/static/arpita-1.png" class="__as-47 __w-48"></img><div data-id="51" class="ft_column __w-49 __g-50"><div data-id="52" class="__pt-51 __ml-52 __mb-53 __rl-54"><div data-id="53" class="__pr-55 __c-56 __bgc-57 __d-58">Hi! I am Arpita Jaiswal !!!!</div></div><div data-id="54" class="__rl-59 __pr-60 __c-61"><p>I’m a <strong>web/software developer</strong> who loves to build projects and share
 valuable ps for programmers on this blog.</p>
 Currently, building <strong>fastn</strong>, a programming language for everyone, day and
-night.</div></div></div><div data-id="55" class="__rl-62 __as-63 __c-64"><em>Let’s dive in…</em></div><div data-id="56" class="ft_row __w-65 __pl-66 __pr-67 __pt-68 __pb-69 __bgc-70"><div data-id="57" class="__rl-71 __as-72 __c-73">Get yourself introduced with fastn. Discover the new possibilities and explore
-the new found power that fastn gives you while building your website.</div><div data-id="58" class="__pl-74 __pr-75 __pt-76 __pb-77 __c-78 __bgc-79">Learn More</div></div></div></div></div><comment data-id="59"></comment><comment data-id="60"></comment></div><div data-id="61" class="ft_column __w-80"></div><comment data-id="62"></comment></div><div data-id="63" class="ft_row __pos-81 __p-82 __bw-83 __br-84 __bc-85 __b-86 __r-87 __z-88 __bgc-89"><comment data-id="64"></comment><div data-id="65" class="ft_row __cur-90"><img data-id="66" src="-/fastn-community.github.io/dark-mode-switcher/static/system-mode-active.png" class="__as-91 __w-92 __h-93"></img></div><comment data-id="67"></comment><comment data-id="68"></comment></div><comment data-id="69"></comment></div></div></div></body><style id="styles">
+night.</div></div></div><div data-id="55" class="__rl-62 __as-63 __c-64"><em>Let’s dive in…</em></div><div data-id="56" class="ft_row __w-65 __pl-66 __pr-67 __pt-68 __pb-69 __bgc-70 __g-71"><div data-id="57" class="__rl-72 __as-73 __c-74">Get yourself introduced with fastn. Discover the new possibilities and explore
+the new found power that fastn gives you while building your website.</div><div data-id="58" class="__pl-75 __pr-76 __pt-77 __pb-78 __br-79 __c-80 __bgc-81">Learn More</div></div></div></div></div><comment data-id="59"></comment><comment data-id="60"></comment></div><div data-id="61" class="ft_column __w-82"></div><comment data-id="62"></comment></div><div data-id="63" class="ft_row __pos-83 __p-84 __bw-85 __br-86 __bc-87 __b-88 __r-89 __z-90 __bgc-91"><comment data-id="64"></comment><div data-id="65" class="ft_row __cur-92"><img data-id="66" src="-/fastn-community.github.io/dark-mode-switcher/static/system-mode-active.png" class="__as-93 __w-94 __h-95"></img></div><comment data-id="67"></comment><comment data-id="68"></comment></div><comment data-id="69"></comment></div></div></div></body><style id="styles">
     .__w-1 { width: 100%; }
 	.__h-2 { height: 100%; }
 	.__w-3 { width: 100%; }
@@ -399,6 +399,7 @@ the new found power that fastn gives you while building your website.</div><div 
 	.__pr-55 { padding-right: 12px; }
 	.__c-56 { color: white !important; }
 	.__bgc-57 { background-color: #b58fdc; }
+	body.dark .__bgc-57 { background-color: #460F7B; }
 	.__d-58 { display: inline; }
 	.__rl-59 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 22px; font-weight: 400; line-height: 1.5em; }
 	.__pr-60 { padding-right: 50px; }
@@ -415,31 +416,35 @@ the new found power that fastn gives you while building your website.</div><div 
 	.__pt-68 { padding-top: 75px; }
 	.__pb-69 { padding-bottom: 75px; }
 	.__bgc-70 { background-color: #fc9cd5; }
-	.__rl-71 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 22px; font-weight: 400; line-height: 1.5em; }
-	.__as-72 { align-self: center; }
-	.__c-73 { color: white !important; }
-	.__pl-74 { padding-left: 34px; }
-	.__pr-75 { padding-right: 34px; }
-	.__pt-76 { padding-top: 21px; }
-	.__pb-77 { padding-bottom: 21px; }
-	.__c-78 { color: white !important; }
-	.__bgc-79 { background-color: #b58fdc; }
-	.__w-80 { width: 100%; }
-	.__pos-81 { position: fixed; }
-	.__p-82 { padding: 10px; }
-	.__bw-83 { border-width: 1px; }
-	.__br-84 { border-radius: 4px; }
-	.__bc-85 { border-color: #D2D2D2; }
-	body.dark .__bc-85 { border-color: #434547; }
-	.__b-86 { bottom: 25px; }
-	.__r-87 { right: 25px; }
-	.__z-88 { z-index: 99999999999999; }
-	.__bgc-89 { background-color: #FFFFFF; }
-	body.dark .__bgc-89 { background-color: #130224; }
-	.__cur-90 { cursor: pointer; }
-	.__as-91 { align-self: center; }
-	.__w-92 { width: 19px; }
-	.__h-93 { height: 19px; }
+	body.dark .__bgc-70 { background-color: #4d002e; }
+	.__g-71 { gap: 30px; }
+	.__rl-72 {  font-family: fifthtry-github-io-inter-font-Inter; letter-spacing: 0px; font-size: 22px; font-weight: 400; line-height: 1.5em; }
+	.__as-73 { align-self: center; }
+	.__c-74 { color: white !important; }
+	.__pl-75 { padding-left: 34px; }
+	.__pr-76 { padding-right: 34px; }
+	.__pt-77 { padding-top: 21px; }
+	.__pb-78 { padding-bottom: 21px; }
+	.__br-79 { border-radius: 15px; }
+	.__c-80 { color: white !important; }
+	.__bgc-81 { background-color: #b58fdc; }
+	body.dark .__bgc-81 { background-color: #460F7B; }
+	.__w-82 { width: 100%; }
+	.__pos-83 { position: fixed; }
+	.__p-84 { padding: 10px; }
+	.__bw-85 { border-width: 1px; }
+	.__br-86 { border-radius: 4px; }
+	.__bc-87 { border-color: #D2D2D2; }
+	body.dark .__bc-87 { border-color: #434547; }
+	.__b-88 { bottom: 25px; }
+	.__r-89 { right: 25px; }
+	.__z-90 { z-index: 99999999999999; }
+	.__bgc-91 { background-color: #FFFFFF; }
+	body.dark .__bgc-91 { background-color: #130224; }
+	.__cur-92 { cursor: pointer; }
+	.__as-93 { align-self: center; }
+	.__w-94 { width: 19px; }
+	.__h-95 { height: 19px; }
     </style><style>
 
 @font-face { unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
@@ -9684,6 +9689,13 @@ fastn_utils.createNestedObject(global, "arjaupashak_com___heading_hero", functio
   record.set("font_family", fastn.mutableList([global.fastn_community_github_io_lobster_font_assets__fonts.get("Lobster")]));
   return record;
 }());
+fastn_utils.createNestedObject(global, "arjaupashak_com___title_bg", function () {
+  let record = fastn.recordInstance({
+  });
+  record.set("light", "#b58fdc");
+  record.set("dark", "#460F7B");
+  return record;
+}());
 fastn_utils.createNestedObject(global, "arjaupashak_com___copy_regular", function () {
   let record = fastn.recordInstance({
   });
@@ -9746,13 +9758,7 @@ let arjaupashak_com___blog_desktop = function (parent, inherited, args)
             record.set("dark", "white");
             return record;
           }(), inherited);
-          rooti0.setProperty(fastn_dom.PropertyKind.Background, fastn_dom.BackgroundStyle.Solid(function () {
-            let record = fastn.recordInstance({
-            });
-            record.set("light", "#b58fdc");
-            record.set("dark", "#b58fdc");
-            return record;
-          }()), inherited);
+          rooti0.setProperty(fastn_dom.PropertyKind.Background, fastn_dom.BackgroundStyle.Solid(global.arjaupashak_com___title_bg), inherited);
           rooti0.setProperty(fastn_dom.PropertyKind.Display, fastn_dom.Display.Inline, inherited);
         }
         ]), inherited);
@@ -9831,6 +9837,13 @@ let arjaupashak_com___small_message = function (parent, inherited, args)
   }
 }
 global["arjaupashak_com___small_message"] = arjaupashak_com___small_message;
+fastn_utils.createNestedObject(global, "arjaupashak_com___step_2_bg", function () {
+  let record = fastn.recordInstance({
+  });
+  record.set("light", "#fc9cd5");
+  record.set("dark", "#4d002e");
+  return record;
+}());
 let arjaupashak_com___banner_with_cta = function (parent, inherited, args)
 {
   let __fastn_super_package_name__ = __fastn_package_name__;
@@ -9844,13 +9857,8 @@ let arjaupashak_com___banner_with_cta = function (parent, inherited, args)
     parenti0.setProperty(fastn_dom.PropertyKind.Width, fastn_dom.Resizing.FillContainer, inherited);
     parenti0.setProperty(fastn_dom.PropertyKind.PaddingHorizontal, fastn_dom.Length.Px(60), inherited);
     parenti0.setProperty(fastn_dom.PropertyKind.PaddingVertical, fastn_dom.Length.Px(75), inherited);
-    parenti0.setProperty(fastn_dom.PropertyKind.Background, fastn_dom.BackgroundStyle.Solid(function () {
-      let record = fastn.recordInstance({
-      });
-      record.set("light", "#fc9cd5");
-      record.set("dark", "#fc9cd5");
-      return record;
-    }()), inherited);
+    parenti0.setProperty(fastn_dom.PropertyKind.Background, fastn_dom.BackgroundStyle.Solid(global.arjaupashak_com___step_2_bg), inherited);
+    parenti0.setProperty(fastn_dom.PropertyKind.Spacing, fastn_dom.Spacing.Fixed(fastn_dom.Length.Px(30)), inherited);
     parenti0.setProperty(fastn_dom.PropertyKind.Children, fastn.mutableList([function (root, inherited) {
       let rooti0 = fastn_dom.createKernel(root, fastn_dom.ElementKind.Text);
       rooti0.setProperty(fastn_dom.PropertyKind.Role, function () {
@@ -9875,6 +9883,7 @@ let arjaupashak_com___banner_with_cta = function (parent, inherited, args)
       rooti0.setProperty(fastn_dom.PropertyKind.StringValue, __args__.cta_text, inherited);
       rooti0.setProperty(fastn_dom.PropertyKind.PaddingHorizontal, fastn_dom.Length.Px(34), inherited);
       rooti0.setProperty(fastn_dom.PropertyKind.PaddingVertical, fastn_dom.Length.Px(21), inherited);
+      rooti0.setProperty(fastn_dom.PropertyKind.BorderRadius, fastn_dom.Length.Px(15), inherited);
       rooti0.setProperty(fastn_dom.PropertyKind.Color, function () {
         let record = fastn.recordInstance({
         });
@@ -9882,13 +9891,7 @@ let arjaupashak_com___banner_with_cta = function (parent, inherited, args)
         record.set("dark", "white");
         return record;
       }(), inherited);
-      rooti0.setProperty(fastn_dom.PropertyKind.Background, fastn_dom.BackgroundStyle.Solid(function () {
-        let record = fastn.recordInstance({
-        });
-        record.set("light", "#b58fdc");
-        record.set("dark", "#b58fdc");
-        return record;
-      }()), inherited);
+      rooti0.setProperty(fastn_dom.PropertyKind.Background, fastn_dom.BackgroundStyle.Solid(global.arjaupashak_com___title_bg), inherited);
     }
     ]), inherited);
     return parenti0;
